--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "hardhat": "^2.14.0"
+  },
+  "dependencies": {
+    "@aave/core-v3": "^1.17.2",
+    "dotenv": "^16.0.3"
   }
 }
